--- a/_data/header.yml
+++ b/_data/header.yml
@@ -45,6 +45,6 @@ primary_nav:
         - link: /pages/retail_e_commerce
           title: Retailand E-commerce
       title: Industries
-    - link: /pages/languages
-      title: Languages
+    - link: /pages/pricing
+      title: Pricing
   logo: /assets/images/ui/transparent_logo.png
