--- a/_data/pages/home.yml
+++ b/_data/pages/home.yml
@@ -162,12 +162,12 @@ block_9:
     link: '#'
     name: Become a Translator
   color_overlay: 'rgba(50, 50, 50, 0)'
-  image: /assets/images/upload/hand_punch.jpg
+  image: /assets/images/upload/0_8yom60axa7t7ivoh.jpg
   text: >-
-    Great Work requires Great Talent. Join the Mar’s community and work with our
-    cutting edge platform on a wide range of projects according to your
-    expertise.
-  title: Translators on MARS
+    Become a part of an amazing translators community. <br/>We offer
+    professional translators and linguists honest terms, full transparency,
+    instant payments, and other advantages
+  title: Become JNDC - Translator
   visible: true
 block_10:
   background_image: ''
