Update Website Pages “about_page_information”

--- a/_data/pages/about.yml
+++ b/_data/pages/about.yml
@@ -74,14 +74,15 @@ block_5:
       text: ''
       title: Exellent in translation skills
     - icon: /assets/images/upload/23111256untitled-3-512.png
-      text: 24/7 service <br/>200 words/hour/translator
+      text: ''
       title: Our translator are all native speaker
-    - icon: /assets/images/upload/recommended.png
-      text: 'ISO 9001:2008 Certified <br/>Native translators only'
-      title: Accurate
-    - icon: /assets/images/upload/recommended.png
-      text: 'Transparent price <br/>No Minimum Charge, no rush fees, Save up to 16%'
-      title: Saving
+    - icon: /assets/images/upload/recruitment-icon-30.png
+      text: ''
+      title: Our translator are recruited strictly
+    - icon: >-
+        /assets/images/upload/1024px-noun_project_knowledge_icon_1677705_cc.svg.png
+      text: ''
+      title: Deep knowledge in translate field
   text: >-
     JNDC - Translation has a community of 100+ professional human translators in
     Vietnamese languages with at least 5 years of experience
