Update Website Pages “about_page_information”

--- a/_data/pages/about.yml
+++ b/_data/pages/about.yml
@@ -84,7 +84,7 @@ block_5:
       title: Deep knowledge in translate field
   text: >-
     JNDC - Translation has a community of 100+ professional human translators in
-    Vietnamese languages with at least 5 years of experience
+    Vietnamese languages <br/>with at least 5 years of experience
   title: OUR TRANSLATOR TEAM
   visible: true
 block_6:
