--- a/_data/header.yml
+++ b/_data/header.yml
@@ -30,11 +30,15 @@ primary_nav:
           title: Transcription Services
       title: Services
     - sub_nav:
+        - link: /pages/general
+          title: General 
+        - link: /pages/certificate
+          title: Certificate
         - link: /pages/legal
           title: Legal
         - link: /pages/financial
           title: Financial
-        - link: /pages/manuafacturing_enginnering
+        - link: /pages/manufacturing_engineering
           title: Manuafacturing and Engineering
         - link: /pages/it_software
           title: IT and Software
