Update Website  Common Information “header_information”

--- a/_data/header.yml
+++ b/_data/header.yml
@@ -25,7 +25,9 @@ primary_nav:
         - link: /pages/translation_services
           title: Translation Services
         - link: /pages/proofreading_edditing_services
-          title: Proofreading and Editting Services
+          title: Proofreading Services
+        - link: /pages/transcription_services
+          title: Transcription Services
       title: Services
     - sub_nav:
         - link: /pages/general
