--- a/_data/pages/about.yml
+++ b/_data/pages/about.yml
@@ -110,8 +110,8 @@ block_6:
   title: Translations Are Better With Experts
   visible: true
 block_7:
-  background_image: /assets/images/upload/hand_punch.jpg
-  color_overlay: 'rgba(50, 50, 60, 0.5)'
+  background_image: ''
+  color_overlay: 'rgba(28, 0, 88, 0.5)'
   text: >-
     Our vision is to affirm the position of Vietnamese People in the world and
     to help people around the world come close together by breaking their
