--- a/_data/pages/about.yml
+++ b/_data/pages/about.yml
@@ -117,18 +117,16 @@ block_7:
     to help people around the world come close together by breaking their
     languages barriers.
   title: VISION
-  visible: true
+  visible: false
 block_8:
   background_image: ''
   color_overlay: 'rgba(28, 0, 88, 0.5)'
   text: >-
     Our vision is to affirm the position of Vietnamese People in the world and
     to help people around the world come close together by breaking their
-    languages barriers. With that such great ambition, JNDC - Translation starts
-    at providing our high-qualified Vietnamese Translation Services which we are
-    most confident.
-  title: OUR VISION
-  visible: false
+    languages barriers.
+  title: VISION
+  visible: true
 block_9:
   background_image: ''
   color_overlay: 'rgba(50, 50, 50, 0)'
