Update Website Pages “translation_services_page_information”

--- a/_data/pages/translation_services.yml
+++ b/_data/pages/translation_services.yml
@@ -1,9 +1,7 @@
 block_1:
-  background_image: /assets/images/upload/d923dbbf84f549bb2d91ba8cf91461a8.jpg
+  background_image: /assets/images/upload/office-environment-.jpg
   color_overlay: 'rgba(50, 50, 50, 0.5)'
-  text: >-
-    As experts in Vietnamese, our certified legal translators and reviewers will
-    accurately translate sensitive legal materials into your desired language.
+  text: "Get access to international markets with fast and accurate\_translation services at the most affordable rates\r."
   title: Expert Translation Services
   visible: true
 block_2:
