--- a/_data/pages/manufacturing_engineering.yml
+++ b/_data/pages/manufacturing_engineering.yml
@@ -2,52 +2,57 @@ block_1:
   background_image: /assets/images/upload/d923dbbf84f549bb2d91ba8cf91461a8.jpg
   color_overlay: 'rgba(50, 50, 50, 0.5)'
   text: >-
-    As experts in Vietnamese, our certified legal translators and reviewers will
-    accurately translate sensitive legal materials into your desired language.
-  title: Expert Translation Services
+    Translations of technical documents require precision and accuracy. Our
+    patented QA procedures guarantee you'll get fast, error-free technical
+    translations.
+  title: Manufacturing & Engineering Translation Services
   visible: true
 block_2:
   background_image: ''
   color_overlay: 'rgba(50, 50, 50, 0)'
   items:
-    - icon: /assets/images/upload/img_417598.png
+    - icon: /assets/images/upload/marketing-icon.png
       text: >-
-        Whether you’re a big corporation or small business, your contracts must
-        be translated accurately to ensure that all parties involved fully
-        understand what is being agreed upon.
-      title: Contract
-    - icon: >-
-        /assets/images/upload/4137121-health-evaluate-svg-png-icon-free-download-168769-evaluates-png-888_981_preview.png
+        With professional translations of your marketing materials, you can show
+        existing customers and prospective customers around the world why they
+        should use your products/services.
+      title: Marketing Materials
+    - icon: /assets/images/upload/1064024-200.png
       text: >-
-        Most people may skip reading the Terms and Conditions online, but that
-        doesn’t mean you should skip accurately translating them. It’s an
-        important legal document that can have many serious implications.
-      title: Term and Conditions
-    - icon: /assets/images/upload/img_517072.png
+        Our translations of your training materials will help ensure that all of
+        your employees are well prepared for the responsibilities of their role.
+      title: Training Materials
+    - icon: /assets/images/upload/tips-hemsida.png
       text: >-
-        In order to do business anywhere, you need the appropriate permits and
-        licenses. When you’re conducting business across borders, getting an
-        accurate translation of permits is imperative.
-      title: Permits/ Licenses
-    - icon: /assets/images/upload/img_517072.png
+        Do you want to reach a wider audience, open up your service to new
+        users, and inform your current customers/clients? Our certified
+        translators will ensure your company’s website and apps are clear in
+        Vietnamese.
+      title: Websites and Apps
+    - icon: /assets/images/upload/img_139240.png
       text: >-
-        Our translation platform is equipped to process translation projects of
-        high volume and technical nature, ensuring quick turnaround
-      title: Policies & GDPR
-    - icon: /assets/images/upload/56-512.png
+        Your customers not understanding what your products do and how to use
+        them has very serious implications, including safety risks. Make sure
+        you get precise translations of product specifications and user manuals
+        for all of your customers.
+      title: Product Specifications/User Manuals
+    - icon: /assets/images/upload/17219-200.png
       text: >-
-        No matter the service, no matter the language, our certified and
-        experienced translators will ensure that your service agreements are
-        coherent to all parties involved.
-      title: Service Agreements
-    - icon: /assets/images/upload/img_310481.png
+        This intellectual property protects your business and keeps it
+        competitive. With accurate translations of your patents, potential
+        competitors will clearly understand that they can’t benefit from your
+        inventions.
+      title: Patents
+    - icon: /assets/images/upload/40105.png
       text: >-
-        Intellectual property protection is no joke. With our professional legal
-        translation services, you can trust that your trademarks and copyrights
-        will be understood in Vietnamese.
-      title: Trademarks & Copyrights
+        Technical reports are formal reports designed to convey technical
+        information in a clear and easily accessible format. Regardless of which
+        language you need them translated into Vietnamese, our experienced
+        translators will ensure that such important information remains clear
+        and accurate.
+      title: Technical Reports
   text: ''
-  title: Which Legal Documents Do We Translate?
+  title: Which industrial manufacturing & engineering documents do we translate?
   visible: true
 block_3:
   background_image: ''
