--- a/_data/pages/it_software.yml
+++ b/_data/pages/it_software.yml
@@ -2,52 +2,39 @@ block_1:
   background_image: /assets/images/upload/basic-free-software-after-windows-reinstall.jpg
   color_overlay: 'rgba(50, 50, 50, 0.5)'
   text: >-
-    As experts in Vietnamese, our certified legal translators and reviewers will
-    accurately translate sensitive legal materials into your desired language.
-  title: Expert Translation Services
+    With software translations in Vietnamese delivered in a short time frame,
+    you can set your software ahead of your competitors. In addition to creating
+    precise translations, our experts will ensure your software is adapted in
+    terms of usability and readability in order to create a valuable experience
+    for all of your users.
+  title: IT & Software Translation Services
   visible: true
 block_2:
   background_image: ''
   color_overlay: 'rgba(50, 50, 50, 0)'
   items:
-    - icon: /assets/images/upload/img_417598.png
+    - icon: /assets/images/upload/img_414428.png
       text: >-
-        Whether you’re a big corporation or small business, your contracts must
-        be translated accurately to ensure that all parties involved fully
-        understand what is being agreed upon.
-      title: Contract
-    - icon: >-
-        /assets/images/upload/4137121-health-evaluate-svg-png-icon-free-download-168769-evaluates-png-888_981_preview.png
+        The applications you’ve created should be easy and fun to use for your
+        users. They should understand how using these applications benefits
+        them. Our certified translators will make sure the text is clear in
+        Vietnamese..
+      title: Mobile Apps/Software Applications
+    - icon: /assets/images/upload/img_402130.png
       text: >-
-        Most people may skip reading the Terms and Conditions online, but that
-        doesn’t mean you should skip accurately translating them. It’s an
-        important legal document that can have many serious implications.
-      title: Term and Conditions
-    - icon: /assets/images/upload/img_517072.png
+        Your website, blogs and other online content should inform and persuade
+        customers about your products and services. Our professional
+        translations will ensure that your business’ web content is effective.
+      title: Web Content
+    - icon: /assets/images/upload/img_139240.png
       text: >-
-        In order to do business anywhere, you need the appropriate permits and
-        licenses. When you’re conducting business across borders, getting an
-        accurate translation of permits is imperative.
-      title: Permits/ Licenses
-    - icon: /assets/images/upload/img_517072.png
-      text: >-
-        Our translation platform is equipped to process translation projects of
-        high volume and technical nature, ensuring quick turnaround
-      title: Policies & GDPR
-    - icon: /assets/images/upload/56-512.png
-      text: >-
-        No matter the service, no matter the language, our certified and
-        experienced translators will ensure that your service agreements are
-        coherent to all parties involved.
-      title: Service Agreements
-    - icon: /assets/images/upload/img_310481.png
-      text: >-
-        Intellectual property protection is no joke. With our professional legal
-        translation services, you can trust that your trademarks and copyrights
-        will be understood in Vietnamese.
-      title: Trademarks & Copyrights
+        It’s likely that your IT & software business has a lot of documentation
+        for a variety of different purposes. They can be user guides, white
+        papers, legal documents, and more. Don’t let important information in
+        these documents get lost in translation.
+      title: Documentation
   text: ''
-  title: Which Legal Documents Do We Translate?
+  title: What kind of IT & software documents do we translate?
   visible: true
 block_3:
   background_image: ''
