Update Website Pages “blockchain_crypto_page_information”

--- a/_data/pages/blockchain_crypto.yml
+++ b/_data/pages/blockchain_crypto.yml
@@ -32,7 +32,7 @@ block_2:
         need to for the future your business.
       title: Initial Coin Offering (ICO)
   text: ''
-  title: What kind of blockchain & cryptocurrency content do we translate?
+  title: What kind of Blockchain & Cryptocurrency content do we translate?
   visible: true
 block_3:
   background_image: ''
