--- a/_data/pages/mobile_video_game.yml
+++ b/_data/pages/mobile_video_game.yml
@@ -1,53 +1,38 @@
 block_1:
-  background_image: /assets/images/upload/d923dbbf84f549bb2d91ba8cf91461a8.jpg
+  background_image: /assets/images/upload/7016c284-af5e-49e2-9feb-a371a8806c1f.jpg
   color_overlay: 'rgba(50, 50, 50, 0.5)'
   text: >-
-    As experts in Vietnamese, our certified legal translators and reviewers will
-    accurately translate sensitive legal materials into your desired language.
-  title: Expert Translation Services
+    Game developers can’t afford to ignore the potential revenue that lies
+    beyond their country’s borders. JNDC - Translation guarantees that your
+    target audiences will enjoy the best experience as though your game was
+    originally produced in their native language.
+  title: Mobile & Video Games Translation Services
   visible: true
 block_2:
   background_image: ''
   color_overlay: 'rgba(50, 50, 50, 0)'
   items:
-    - icon: /assets/images/upload/img_417598.png
+    - icon: /assets/images/upload/img_210318.png
       text: >-
-        Whether you’re a big corporation or small business, your contracts must
-        be translated accurately to ensure that all parties involved fully
-        understand what is being agreed upon.
-      title: Contract
-    - icon: >-
-        /assets/images/upload/4137121-health-evaluate-svg-png-icon-free-download-168769-evaluates-png-888_981_preview.png
+        Your games need to have a user-friendly interface so people will come
+        back time and again and play the games you develop. Design is an
+        important feature of that, but so is text that’s easy to understand.
+      title: User Interface
+    - icon: /assets/images/upload/img_139240.png
       text: >-
-        Most people may skip reading the Terms and Conditions online, but that
-        doesn’t mean you should skip accurately translating them. It’s an
-        important legal document that can have many serious implications.
-      title: Term and Conditions
-    - icon: /assets/images/upload/img_517072.png
+        Sometimes people need help understanding how to play the games your
+        company develops. With our translation services, you can be sure that
+        users will have the information they need to enjoy playing the games to
+        the fullest.
+      title: Manuals/User Help
+    - icon: /assets/images/upload/244899-200.png
       text: >-
-        In order to do business anywhere, you need the appropriate permits and
-        licenses. When you’re conducting business across borders, getting an
-        accurate translation of permits is imperative.
-      title: Permits/ Licenses
-    - icon: /assets/images/upload/img_517072.png
-      text: >-
-        Our translation platform is equipped to process translation projects of
-        high volume and technical nature, ensuring quick turnaround
-      title: Policies & GDPR
-    - icon: /assets/images/upload/56-512.png
-      text: >-
-        No matter the service, no matter the language, our certified and
-        experienced translators will ensure that your service agreements are
-        coherent to all parties involved.
-      title: Service Agreements
-    - icon: /assets/images/upload/img_310481.png
-      text: >-
-        Intellectual property protection is no joke. With our professional legal
-        translation services, you can trust that your trademarks and copyrights
-        will be understood in Vietnamese.
-      title: Trademarks & Copyrights
+        Will your social-network game be the next big thing? If you hope to
+        attract a Vietnamese audience, enlist the help of our professional
+        translators to ensure your users’ gaming experience is an enjoyable one.
+      title: Social-Network Games
   text: ''
-  title: Which Legal Documents Do We Translate?
+  title: Which Content Do We Translate for Mobile & Video Game Companies?
   visible: true
 block_3:
   background_image: ''
