--- a/_data/pages/retail_e_commerce.yml
+++ b/_data/pages/retail_e_commerce.yml
@@ -1,10 +1,9 @@
 block_1:
-  background_image: /assets/images/upload/d923dbbf84f549bb2d91ba8cf91461a8.jpg
+  background_image: >-
+    /assets/images/upload/retail-data_montri-nipitvittaya_shutterstock_525896359.jpg
   color_overlay: 'rgba(50, 50, 50, 0.5)'
-  text: >-
-    As experts in Vietnamese, our certified legal translators and reviewers will
-    accurately translate sensitive legal materials into your desired language.
-  title: Expert Translation Services
+  text: "Addressing customers in their native language is a retailer’s biggest advantage in reaching millions of people around the world instantaneously.\r <br/>JNDC - Translation provides e-commerce translations that turn internet traffic into international sales. We have implemented a patented review methodology that produces effective retail and e-commerce translations and localizations."
+  title: Retail & E-Commerce Translation Services
   visible: true
 block_2:
   background_image: ''
