--- a/_data/pages/retail_e_commerce.yml
+++ b/_data/pages/retail_e_commerce.yml
@@ -9,44 +9,29 @@ block_2:
   background_image: ''
   color_overlay: 'rgba(50, 50, 50, 0)'
   items:
-    - icon: /assets/images/upload/img_417598.png
+    - icon: /assets/images/upload/marketing-icon.png
       text: >-
-        Whether you’re a big corporation or small business, your contracts must
-        be translated accurately to ensure that all parties involved fully
-        understand what is being agreed upon.
-      title: Contract
-    - icon: >-
-        /assets/images/upload/4137121-health-evaluate-svg-png-icon-free-download-168769-evaluates-png-888_981_preview.png
+        No matter what language the materials associated with your store’s
+        marketing campaign are in, they should be effective in attracting new
+        customers and ensuring your current customers continue to use your
+        products and services.
+      title: Marketing Campaigns
+    - icon: /assets/images/upload/79251-200.png
       text: >-
-        Most people may skip reading the Terms and Conditions online, but that
-        doesn’t mean you should skip accurately translating them. It’s an
-        important legal document that can have many serious implications.
-      title: Term and Conditions
-    - icon: /assets/images/upload/img_517072.png
+        You want to show your customers why they should choose your products
+        over the competition. Brochures, catalogs, and packaging all play a part
+        in this. Make sure the content in these materials do their job in
+        marketing your store, whether it’s brick and mortar or online.
+      title: 'Brochures, Catalogs, and Packaging'
+    - icon: /assets/images/upload/img_139240.png
       text: >-
-        In order to do business anywhere, you need the appropriate permits and
-        licenses. When you’re conducting business across borders, getting an
-        accurate translation of permits is imperative.
-      title: Permits/ Licenses
-    - icon: /assets/images/upload/img_517072.png
-      text: >-
-        Our translation platform is equipped to process translation projects of
-        high volume and technical nature, ensuring quick turnaround
-      title: Policies & GDPR
-    - icon: /assets/images/upload/56-512.png
-      text: >-
-        No matter the service, no matter the language, our certified and
-        experienced translators will ensure that your service agreements are
-        coherent to all parties involved.
-      title: Service Agreements
-    - icon: /assets/images/upload/img_310481.png
-      text: >-
-        Intellectual property protection is no joke. With our professional legal
-        translation services, you can trust that your trademarks and copyrights
-        will be understood in Vietnamese.
-      title: Trademarks & Copyrights
+        If your customers don’t understand what your products do and how to use
+        them, there could be very serious implications (e.g. safety issues).
+        Make sure you get precise translations of product specifications and
+        user manuals for all of your customers.
+      title: Product Specifications/User Manuals
   text: ''
-  title: Which Legal Documents Do We Translate?
+  title: What Kind of Retail & E-Commerce Content Do We Translate?
   visible: true
 block_3:
   background_image: ''
