Update Website Pages “legal_page_information”

--- a/_data/pages/legal.yml
+++ b/_data/pages/legal.yml
@@ -65,5 +65,5 @@ block_3:
   text: >-
     Enable globalization for your business with our excellent quality of
     translation services at cost-effective rates.
-  title: Why Choose JNDC - Translation?
+  title: Why Choose JNDC Translation?
   visible: true
