--- a/admin/config.yml
+++ b/admin/config.yml
@@ -1054,9 +1054,14 @@ collections:
     - name: 'about_page'
       label: 'About Page'
       file: '/pages/about.md'
+      editor:
+        preview: false
       fields:
       - { label: 'Title', name: 'title', widget: 'string'}
       - { label: 'Description', name: 'description', widget: 'string'}
+      - { label: 'permalink', name: 'layout', widget: 'string'}
+      - { label: 'Layout', name: 'layout', widget: 'hidden'}
+      - { label: 'Body', name: 'body', widget: 'hidden'}
     - name: 'blockchain_crypto_page'
       label: 'Blockchain Crypto Page'
       file: '/pages/blockchain_crypto.md'
