--- a/admin/config.yml
+++ b/admin/config.yml
@@ -1035,6 +1035,7 @@ collections:
             - {name: 'title', label: 'Title', widget: 'string', required: false}
             - {name: 'link', label: 'Link', widget: 'string', required: false}
 
+
   - name: 'blog_posts'
     label: 'Blog Posts'
     folder: '_posts'
@@ -1048,7 +1049,7 @@ collections:
     - {name: 'author', label: 'Author', widget: 'string'}
     - {name: 'body', label: 'Body', widget: 'markdown'}
 
-  - name: 'title_and_description'
+  # - name: 'title_and_description'
     label: 'Title and Description'
     files:
     - name: 'about_page'
